src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__missing_semicolon.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_fiber: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [
                            Let {
                                pattern: Pattern {
                                    kind: Ident {
                                        by_ref: false,
                                        mutable: false,
                                        name: Spanned {
                                            node: SymbolU32 {
                                                value: 2,
                                            },
                                            span: Span {
                                                start: 13,
                                                end: 14,
                                                start_line: 1,
                                                start_col: 14,
                                            },
                                        },
                                        subpattern: None,
                                    },
                                    span: Span {
                                        start: 13,
                                        end: 14,
                                        start_line: 1,
                                        start_col: 14,
                                    },
                                },
                                ty: None,
                                value: Some(
                                    Expr {
                                        kind: Literal(
                                            Literal {
                                                kind: Int {
                                                    value: 1,
                                                    suffix: None,
                                                },
                                                span: Span {
                                                    start: 17,
                                                    end: 18,
                                                    start_line: 1,
                                                    start_col: 18,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 17,
                                            end: 18,
                                            start_line: 1,
                                            start_col: 18,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 9,
                                    end: 18,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                            Let {
                                pattern: Pattern {
                                    kind: Ident {
                                        by_ref: false,
                                        mutable: false,
                                        name: Spanned {
                                            node: SymbolU32 {
                                                value: 3,
                                            },
                                            span: Span {
                                                start: 23,
                                                end: 24,
                                                start_line: 1,
                                                start_col: 24,
                                            },
                                        },
                                        subpattern: None,
                                    },
                                    span: Span {
                                        start: 23,
                                        end: 24,
                                        start_line: 1,
                                        start_col: 24,
                                    },
                                },
                                ty: None,
                                value: Some(
                                    Expr {
                                        kind: Literal(
                                            Literal {
                                                kind: Int {
                                                    value: 2,
                                                    suffix: None,
                                                },
                                                span: Span {
                                                    start: 27,
                                                    end: 28,
                                                    start_line: 1,
                                                    start_col: 28,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 27,
                                            end: 28,
                                            start_line: 1,
                                            start_col: 28,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 19,
                                    end: 29,
                                    start_line: 1,
                                    start_col: 20,
                                },
                            },
                        ],
                        expr: None,
                        span: Span {
                            start: 7,
                            end: 31,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 31,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 31,
        start_line: 1,
        start_col: 1,
    },
}
