src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__mixed_bitwise_operators.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_fiber: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Binary {
                                    op: BitOr,
                                    left: Expr {
                                        kind: Binary {
                                            op: BitAnd,
                                            left: Expr {
                                                kind: Path(
                                                    ExprPath {
                                                        segments: [
                                                            ExprPathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 2,
                                                                    },
                                                                    span: Span {
                                                                        start: 9,
                                                                        end: 10,
                                                                        start_line: 1,
                                                                        start_col: 10,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 9,
                                                            end: 10,
                                                            start_line: 1,
                                                            start_col: 10,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 9,
                                                    end: 10,
                                                    start_line: 1,
                                                    start_col: 10,
                                                },
                                            },
                                            right: Expr {
                                                kind: Literal(
                                                    Literal {
                                                        kind: Int {
                                                            value: 255,
                                                            suffix: None,
                                                        },
                                                        span: Span {
                                                            start: 13,
                                                            end: 17,
                                                            start_line: 1,
                                                            start_col: 14,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 13,
                                                    end: 17,
                                                    start_line: 1,
                                                    start_col: 14,
                                                },
                                            },
                                        },
                                        span: Span {
                                            start: 9,
                                            end: 17,
                                            start_line: 1,
                                            start_col: 10,
                                        },
                                    },
                                    right: Expr {
                                        kind: Binary {
                                            op: BitXor,
                                            left: Expr {
                                                kind: Path(
                                                    ExprPath {
                                                        segments: [
                                                            ExprPathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 3,
                                                                    },
                                                                    span: Span {
                                                                        start: 20,
                                                                        end: 21,
                                                                        start_line: 1,
                                                                        start_col: 21,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 20,
                                                            end: 21,
                                                            start_line: 1,
                                                            start_col: 21,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 20,
                                                    end: 21,
                                                    start_line: 1,
                                                    start_col: 21,
                                                },
                                            },
                                            right: Expr {
                                                kind: Literal(
                                                    Literal {
                                                        kind: Int {
                                                            value: 15,
                                                            suffix: None,
                                                        },
                                                        span: Span {
                                                            start: 24,
                                                            end: 28,
                                                            start_line: 1,
                                                            start_col: 25,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 24,
                                                    end: 28,
                                                    start_line: 1,
                                                    start_col: 25,
                                                },
                                            },
                                        },
                                        span: Span {
                                            start: 20,
                                            end: 28,
                                            start_line: 1,
                                            start_col: 21,
                                        },
                                    },
                                },
                                span: Span {
                                    start: 9,
                                    end: 28,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 30,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 30,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 30,
        start_line: 1,
        start_col: 1,
    },
}
